--- a/css/default.css
+++ b/css/default.css
@@ -52,3 +52,27 @@ header nav a:hover{
 .social-icons img{
   padding: 0 5px;
 }
+
+.carousel-item{
+  background-color: darksalmon;
+  height: 400px;
+  position: relative;
+}
+
+.carousel-item .carousel-item-text{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.carousel-control-prev-icon{
+  filter:invert(1)
+}
+
+.carousel-indicators [data-bs-target] {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
